--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main id="index-main">
         <article>
             <h2>Welcome to the Wiki!</h2>
-            <p><a href="images/bof3/Ryu.webp" target="_blank"><img id="index-img" class="article-img" src="images/bof3/Ryu.webp" alt='ryu breath of fire'></a>Hello, I'm Rad and this is my personal Breath of Fire Encyclopedia. This isn't meant to be an all encompassing source of all the franchise's information, but just as a project for self improvement in Web Development, so DON'T be surprised with this wiki's often casual tone and demeanor. Besides containing info for the games, it will also have my own views and takes on them, so DO expect a lot of bias towards <a href="bof3.html">Breath of Fire 3</a>(my beloved).</p>
+            <p><a href="images/bof3/Ryu.webp" target="_blank"><img id="index-img" class="article-img" src="images/bof3/Ryu.webp" alt='ryu breath of fire'></a>Hello, I'm niahon and this is my personal Breath of Fire Encyclopedia. This isn't meant to be an all encompassing source of all the franchise's information, but just as a project for self improvement in Web Development, so DON'T be surprised with this wiki's often casual tone and demeanor. Besides containing info for the games, it will also have my own views and takes on them, so DO expect a lot of bias towards <a href="bof3.html">Breath of Fire 3</a>(my beloved).</p>
     
             <p>As for the naming choices, I prefer to use the closer possible renditions to the japanese names in here, as I feel the original translation of <a href="bof1.html">Breath of Fire 1 </a>and <a href="bof2.html">2</a> are lacking in many areas, to say the least. And the wiki's name is also temporary, it's just an attempt at a wordplay but I honestly have no clue what I was going for. I guess "Frenzy" does start with F just like "Fire" but like ???. I accept suggestions as my brain is not large enough for such a task.</p>
 
@@ -53,7 +53,7 @@
 
     </main>
     <footer>
-        Site made by Rad#7793
+        Site made by niahon
     </footer>
 </body>
 </html>
