fix author name

--- a/gallery.html
+++ b/gallery.html
@@ -97,7 +97,7 @@
         </div>
     </main>
     <footer>
-        Site made by Rad#7793
+        Website created by niahon
     </footer>
 </body>
 </html>
